syntax = "proto3";

package logger;

option go_package = "github.com/9triver/iarnet/proto/logger";

// LogService 日志服务
service LogService {
  // PushLogs 推送日志（单条）
  rpc PushLog(PushLogRequest) returns (PushLogResponse);
  
  // PushLogsBatch 批量推送日志
  rpc PushLogsBatch(PushLogsBatchRequest) returns (PushLogResponse);
  
  // StreamLogs 流式推送日志
  rpc StreamLogs(stream PushLogRequest) returns (PushLogResponse);
}

// PushLogRequest 推送日志请求
message PushLogRequest {
  string timestamp = 1;       // RFC3339Nano 格式
  string container_id = 2;    // 容器ID
  string container_type = 3;  // runner/component
  string level = 4;           // debug/info/warning/error/fatal
  string message = 5;         // 日志消息
  string source = 6;          // stdout/stderr
  map<string, string> labels = 7;  // 标签（app_id, component_id等）
  string raw = 8;             // 原始日志行（可选）
}

// PushLogsBatchRequest 批量推送请求
message PushLogsBatchRequest {
  repeated PushLogRequest logs = 1;
}

// PushLogResponse 推送响应
message PushLogResponse {
  bool success = 1;
  string message = 2;
  int32 accepted_count = 3;  // 接受的日志条数
  int32 rejected_count = 4;  // 拒绝的日志条数
}

